# devy-bevy

./: Cargo.toml
example-copies/1-first-try/src/: main.rs
example-copies/2-first-render/: Cargo.toml
example-copies/2-first-render/src/: main.rs
example-copies/3-text2d/: Cargo.toml
example-copies/3-text2d/src/: main.rs
example-copies/4-scene3d/: Cargo.toml
example-copies/4-scene3d/src/: main.rs
games/1-first-try/: Cargo.toml
games/1-first-try/src/: main.rs
games/2-first-render/: Cargo.toml
plugins/core/src/: exit_game.rs  input_manager.rs  isometric_camera.rs  lib.rs
plugins/exit-game/: Cargo.toml
plugins/exit-game/src/: lib.rs
plugins/input-manager/: Cargo.toml
plugins/input-manager/src/: lib.rs
src/: main.rs
