[workspace]

resolver = "2"

members = [
  "example-copies/1-first-try"
, "example-copies/2-first-render"
, "example-copies/3-text2d"
, "example-copies/4-scene3d"

, "plugins/exit-game"
]

[workspace.dependencies]
bevy = "0.15.0"
exit-game = { path = "plugins/exit-game" }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

